// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions and reducer Ended action sets ended to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": true,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": true,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Expand action sets expanded to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": true,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer External pause request sets willPauseNotify to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": false,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer External play request sets willPlayNotify to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": false,
}
`;

exports[`actions and reducer Loaded action sets loading to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Loading action sets loading to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": true,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Minimise action sets expanded to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Pause action sets playing to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Play action sets playing to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": true,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Playing audio after previous has ended resets ended state 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": true,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Requesting new audio play resets ended state 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Set playback rate action updates playback rate 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 2,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Update current time action updates currentTime 1`] = `
Object {
  "currentTime": 10,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer Update duration action updates duration 1`] = `
Object {
  "currentTime": 0,
  "duration": 60,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playbackRate": 1,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer seeked action sets seeking to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playing": false,
  "seeking": false,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;

exports[`actions and reducer seeking action sets seeking to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "expanded": false,
  "loading": false,
  "playing": false,
  "seeking": true,
  "willPauseNotify": true,
  "willPlayNotify": true,
}
`;
